--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,7 +3,7 @@
  <section class="et-hero-tabs">
     <h1>MY PORTFOLIO</h1>
     <div class="et-hero-tabs-container">
-        <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="PORTFOLIO.html">HOME</a>
+        <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="index.html">HOME</a>
         <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="aboutme.html">ABOUT ME</a>
         <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="education.html">SERVICES</a>
         <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="experience.html">EDUCATION</a>
