--- a/Portfolio/aboutme.html
+++ b/Portfolio/aboutme.html
@@ -1,6 +1,6 @@
 <title>About Me</title>
 <div class="et-hero-tabs-container">
-   <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="PORTFOLIO.html">HOME</a>
+   <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="index.html">HOME</a>
    <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="aboutme.html">ABOUT ME</a>
    <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="education.html">SERVICES</a>
    <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="experience.html">EDUCATION</a>
