--- a/Portfolio/education.html
+++ b/Portfolio/education.html
@@ -2,7 +2,7 @@
   <title>Services</title>
 <section class="et-hero-tabs" style="display:contents;">
     <div class="et-hero-tabs-container">
-      <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="PORTFOLIO.html">HOME</a>
+      <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="index.html">HOME</a>
       <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="aboutme.html">ABOUT ME</a>
       <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="education.html">SERVICES</a>
       <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="experience.html">EDUCATION</a>
