--- a/Portfolio/experience.html
+++ b/Portfolio/experience.html
@@ -2,7 +2,7 @@
   <title>Education</title>
 <section class="et-hero-tabs" style="font-family:Raleway, Arial, sans-serif">
   <div class="et-hero-tabs-container" >
-    <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="PORTFOLIO.html">HOME</a>
+    <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="index.html">HOME</a>
     <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="aboutme.html">ABOUT ME</a>
     <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="education.html">SERVICES</a>
     <a class="et-hero-tab" style="font-size: medium;  font-family: Century Gothic, 'Lato', sans-serif" href="experience.html">EDUCATION</a>
